# ppa

./: .gitignore  CMakeLists.txt  Packages  README.md  Release  nil-clix-dev-1.0.1-Linux.deb  nil-clix-dev-1.0.2-Linux.deb  nil-clix-dev-1.0.5-Linux.deb  nil-gate-dev-1.5.3-Linux.deb  nil-gate-dev-1.5.4-Linux.deb  nil-gate-dev-1.6.4-Linux.deb  nil-xalt-dev-1.3.1-Linux.deb  nil-xalt-dev-1.4.0-Linux.deb  nil-xalt-dev-1.4.1-Linux.deb  nil-xit-dev-0.3.3-Linux.deb  nil-xit-dev-0.3.4-Linux.deb  nil-xit-dev-0.3.5-Linux.deb  nil-xit-dev-0.3.7-Linux.deb  nil-xit-test-dev-0.0.11-Linux.deb  nil-xit-test-dev-0.0.12-Linux.deb  nil-xit-test-dev-0.0.13-Linux.deb  nil-xit-test-dev-0.0.14-Linux.deb  nil-xit-test-dev-0.0.17-Linux.deb
cmake/: config.cmake.in  package.cmake
configure/: command
sandbox/service/: CMakeLists.txt  main.cpp
sandbox/xit-gtest/: CMakeLists.txt  frame_setup.hpp  main.cpp  userland_utils.cpp  userland_utils.hpp
sandbox/xit-gtest/files/: slider_frame.msgpack
sandbox/xit-gtest/files/draw/: circles_frame.msgpack
sandbox/xit-gtest/files/plotly/a/: input_frame.msgpack
sandbox/xit-gtest/files/plotly/b/: input_frame.msgpack
sandbox/xit-gtest/gui/: DrawFrame.svelte  Group.svelte  InputFrame.svelte  PlotlyFrame.svelte  Save.svelte  Slider.svelte  codec.js
sandbox/xit-service/: CMakeLists.txt  main.cpp
script/: gen
